[package]
name = "codeckit"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Some codec collections"
homepage = "https://github.com/rikonaka/codeckit-rs"
documentation = "https://docs.rs/codeckit"
repository = "https://github.com/rikonaka/codeckit-rs"
readme = "README.md"
keywords = ["codec"]

[dependencies]


[dev-dependencies]
criterion = { version = "^0", features = ["html_reports"] }
rand = "^0"
base64 = "^0"

[[bench]]
name = "benchmark"
harness = false